--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
             </div>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Registrar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="editar.html">Editar</a>
-                    </li>
+                    <ul class="navbar-nav justify-content-center"> 
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Registrar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="editar.html">Editar</a>
+                        </li>
+                    </ul>
                 </div>
-                </div>
-            </nav>
+            </nav>            
             <div>
                 <br>
                 <hr>
