--- a/editar.html
+++ b/editar.html
@@ -1,11 +1,318 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EDITAR</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="estilo.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
 </head>
 <body>
-    <h1>holas</h1>
+    <h1 class="titulo">Listado de Pacientes</h1>
+    <div>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="pacientes.html">Registrar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="editar.html">Editar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div>
+        <hr>
+    </div>
+    <div class="main-container">
+        <div id="tabla-pacientes-container" class="tabla-container">
+            <table id="tabla-pacientes" class="table table-striped table-bordered table-hover table-sm">
+                <thead>
+                    <tr>
+                        <th>Seleccionar</th>
+                        <th>Nombres</th>
+                        <th>Apellidos</th>
+                        <th>Cédula</th>
+                        <th>Email</th>
+                        <th>Fecha de Nacimiento</th>
+                        <th>Edad</th>
+                        <th>Hora de ingreso</th>
+                        <th>Tipo de consulta</th>
+                        <th>Alérgico alguna medicación</th>
+                        <th>Recomendación del médico</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+        <div class="text-center">
+            <a href="pacientes.html" style="text-decoration: none;">
+                <button class="btn btn-secondary">Regresar</button>
+            </a>
+            <button id="btnEliminar" class="btn btn-danger">Eliminar</button>
+            <button id="btnEditar" class="btn btn-success">Editar</button>
+        </div>
+        <div>
+            <hr>
+        </div>
+        <footer>
+            <br> <br> <br>
+            <h3 class="text-center text-white">Desarrollado por Lenin Flores@</h3>
+        </footer>
+        <!-- Modal para editar paciente -->
+        <div class="modal fade" id="modalEditarPaciente" tabindex="-1" aria-labelledby="modalEditarPacienteLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalEditarPacienteLabel">Editar Paciente</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <!-- Aquí se cargarán los campos del formulario para editar el paciente -->
+                        <form id="formEditarPaciente">
+                            <!-- Campos del formulario -->
+                            <div class="row">
+                                <div class="col-6">
+                                    <label for=""><b>Nombres:</b></label>
+                                    <input type="text" placeholder="Ingrese sus nombres" id="nombres"
+                                        class="form-control">
+                                    <br>
+                                    <label for=""><b>Cedula:</b></label> <!--ETIQUETA DE TEXTO PARA LA PANTALLA-->
+                                    <input type="text" placeholder="Ingrese la cédula" id="cedula" class="form-control">
+                                    <!--EL PLACEHOLDER NOS DA UNA AYUDA PARA INTRODUCIR INFORMACIÓN LAS CAJAS DE TEXTO-->
+                                    <br>
+                                    <label for=""><b>Fecha de Nacimiento:</b></label>
+                                    <input type="date" id="fechaNacimiento" class="form-control">
+                                    <br>
+                                    <label for=""><b>Hora de ingreso:</b></label> <!--SUBRAYADO tag u y cursiva tag i-->
+                                    <input type="time" id="horaIngreso" class="form-control">
+                                </div>
+                                <div class="col-6">
+                                    <label for=""><b>Apellidos:</b></label>
+                                    <input type="text" placeholder="Ingrese sus apellidos" id="apellidos"
+                                        class="form-control">
+                                    <br>
+                                    <label for=""><b>Email:</b></label>
+                                    <input type="email" placeholder="Ingrese su email" id="email" required
+                                        class="form-control"> <!--si le pongo type=email ya valida que tenga un @-->
+                                    <br>
+                                    <label for=""><b>Edad:</b></label>
+                                    <input type="number" placeholder="Ingrese su edad" id="edad" class="form-control">
+                                    <br>
+                                    <label for=""><b>Tipo de consulta:</b></label>
+                                    <!--ES UNA LISTA DESPLEGABLE EL select Y option-->
+                                    <select name="" id="tipoConsulta" class="form-control">
+                                        <option value="Normal">--Normal</option>
+                                        <option value="Urgente">--Urgente</option>
+                                        <option value="Emergencia">--Emergencia</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div>
+                                <label for=""><b>Alérgico alguna medicación:</b></label>
+                                <textarea name="" id="alergicoMedicacion"
+                                    placeholder="Ingrese medicamentos alergicos del paciente" rows="10" cols=""
+                                    class="form-control"></textarea>
+                                <!--ROWS es como para abajo y el COLS es para la derecha-->
+                            </div>
+                            <div>
+                                <label for=""><b>Alérgico alguna medicación:</b></label>
+                                <label for=""><b>Recomendaciones del médico:</b></label>
+                                <textarea name="" id="recomendacionMedica" placeholder="Recomendaciones del médico" rows="10" cols=""
+                                    class="form-control"></textarea>
+                                <!--ROWS es como para abajo y el COLS es para la derecha-->
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-success" id="btnGuardarCambios">Guardar Cambios</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script type="module">
+            // Importa las funciones necesarias de los SDKs de Firebase
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+            import { getFirestore, collection, onSnapshot, query, doc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+            // Configuración de Firebase para tu aplicación web
+            const firebaseConfig = {
+                apiKey: "AIzaSyChuep_jaPgXNwG7NqO9LsPFc6d1hfK9qk",
+                authDomain: "registropacientes-6c4d2.firebaseapp.com",
+                projectId: "registropacientes-6c4d2",
+                storageBucket: "registropacientes-6c4d2.appspot.com",
+                messagingSenderId: "596163718939",
+                appId: "1:596163718939:web:04007e06ff4067853dadbe"
+            };
+
+            // Inicializa Firebase
+            const app = initializeApp(firebaseConfig);
+            const db = getFirestore(app);
+
+            // Referencia a la colección "pacientes"
+            const pacientesRef = collection(db, "pacientes");
+
+            // Función para crear la estructura de la tabla HTML
+            function crearTablaPacientes(datos) {
+                const tabla = $('#tabla-pacientes').DataTable({
+                    destroy: true,  // Permite reinicializar la tabla
+                    data: datos,
+                    columns: [
+                        {
+                            data: null,
+                            render: function (data, type, row) {
+                                return `<input type="checkbox" value="${data.id}">`;
+                            }
+                        },
+                        { data: 'nombres' },
+                        { data: 'apellidos' },
+                        { data: 'cedula' },
+                        { data: 'email' },
+                        { data: 'fechaNacimiento' },
+                        { data: 'edad' },
+                        { data: 'horaIngreso' },
+                        { data: 'tipoConsulta' },
+                        { data: 'alergicoMedicacion' },
+                        { data: 'recomendacionMedica' }
+                    ],
+                    responsive: true,
+                    paging: true,
+                    searching: true,
+                    ordering: true,
+                    info: true,
+                    language: {
+                        processing: "Procesando...",
+                        search: "Buscar:",
+                        lengthMenu: "Mostrar _MENU_ registros",
+                        info: "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                        infoEmpty: "Mostrando registros del 0 al 0 de un total de 0 registros",
+                        infoFiltered: "(filtrado de un total de _MAX_ registros)",
+                        infoPostFix: "",
+                        loadingRecords: "Cargando...",
+                        zeroRecords: "No se encontraron resultados",
+                        emptyTable: "Ningún dato disponible en esta tabla",
+                        paginate: {
+                            first: "Primero",
+                            previous: "Anterior",
+                            next: "Siguiente",
+                            last: "Último"
+                        },
+                        aria: {
+                            sortAscending: ": Activar para ordenar la columna de manera ascendente",
+                            sortDescending: ": Activar para ordenar la columna de manera descendente"
+                        }
+                    }
+                });
+
+                $('#btnEditar').on('click', function () {
+                    const checkboxes = $('#tabla-pacientes input[type="checkbox"]:checked');
+                    if (checkboxes.length === 1) {
+                        const docId = checkboxes[0].value;
+                        // Obtener los datos del paciente seleccionado
+                        const pacienteRef = doc(db, "pacientes", docId);
+                        onSnapshot(pacienteRef, (doc) => {
+                            if (doc.exists()) {
+                                const paciente = doc.data();
+                                // Cargar los datos en el formulario dentro del modal
+                                $('#modalEditarPaciente').modal('show'); // Mostrar el modal
+                                $('#nombres').val(paciente.nombres);
+                                $('#apellidos').val(paciente.apellidos);
+                                $('#cedula').val(paciente.cedula);
+                                $('#email').val(paciente.email);
+                                $('#fechaNacimiento').val(paciente.fechaNacimiento);
+                                $('#edad').val(paciente.edad);
+                                $('#horaIngreso').val(paciente.horaIngreso);
+                                $('#tipoConsulta').val(paciente.tipoConsulta);
+                                $('#alergicoMedicacion').val(paciente.alergicoMedicacion);
+                                $('#recomendacionMedica').val(paciente.recomendacionMedica);
+                            } else {
+                                console.log("No such document!");
+                            }
+                        });
+                    } else {
+                        alert('Por favor, seleccione un único paciente para editar.');
+                    }
+                });
+                $('#btnGuardarCambios').on('click', function () {
+                    // Obtener los valores actualizados del formulario dentro del modal
+                    const nuevosDatos = {
+                        nombres: $('#nombres').val(),
+                        apellidos: $('#apellidos').val(),
+                        cedula: $('#cedula').val(),
+                        email: $('#email').val(),
+                        fechaNacimiento: $('#fechaNacimiento').val(),
+                        edad: $('#edad').val(),
+                        horaIngreso: $('#horaIngreso').val(),
+                        tipoConsulta: $('#tipoConsulta').val(),
+                        alergicoMedicacion: $('#alergicoMedicacion').val(),
+                        recomendacionMedica: $('#recomendacionMedica').val()
+                    };
+
+                    // Validar si recomendacionMedica está definido antes de asignarlo
+                    const recomendacionMedica = $('#recomendacionMedica').val();
+                    if (recomendacionMedica !== undefined) {
+                        nuevosDatos.recomendacionMedica = recomendacionMedica;
+                    }
+
+                    const docId = $('#tabla-pacientes input[type="checkbox"]:checked').val();
+                    const pacienteRef = doc(db, "pacientes", docId);
+
+                    // Actualizar los datos del paciente en la base de datos
+                    updateDoc(pacienteRef, nuevosDatos)
+                        .then(() => {
+                            console.log("Document successfully updated!");
+                            $('#modalEditarPaciente').modal('hide'); // Ocultar el modal después de actualizar
+                        })
+                        .catch((error) => {
+                            console.error("Error updating document: ", error);
+                        });
+                });
+
+
+            }
+
+            // Función para obtener los datos de la colección "pacientes"
+            function obtenerDatosPacientes() {
+                const consulta = query(pacientesRef); // Consulta a la colección
+                onSnapshot(consulta, (snapshot) => {
+                    const datos = snapshot.docs.map(doc => ({ ...doc.data(), id: doc.id }));  // Extrae los datos y agrega el ID
+                    crearTablaPacientes(datos);  // Crea y actualiza la tabla
+                });
+            }
+
+            obtenerDatosPacientes();  // Llama la función para obtener los datos al inicio
+
+            // Función para eliminar los registros seleccionados
+            async function eliminarSeleccionados() {
+                const checkboxes = document.querySelectorAll('#tabla-pacientes input[type="checkbox"]:checked');
+                for (const checkbox of checkboxes) {
+                    const docId = checkbox.value;
+                    await deleteDoc(doc(db, "pacientes", docId));
+                }
+                obtenerDatosPacientes();  // Refresca la tabla después de eliminar
+            }
+
+            // Asigna el evento al botón de eliminar
+            document.getElementById('btnEliminar').addEventListener('click', eliminarSeleccionados);
+        </script>
 </body>
+
 </html>
