--- a/index.html
+++ b/index.html
@@ -1,144 +1,96 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PACIENTES</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="estilo.css">
+    <title>INICIO DE SESIÓN</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="estiloLogin.css">
 </head>
-<body>
-    <form id="form-product">
-            <div class="contenedor">
-                <h1 class=" text-center text-white">Regitro de Pacientes</h1>
-            </div>
-            <div>
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <div class="container">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="">Registrar</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="editar.html">Editar</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-            <div>
-                <hr>
-            </div>
-            <div class="row" style="padding: 20px;">
-                <div class="col-6">
-                    <label for=""><b>Nombres:</b></label>
-                    <input type="text" placeholder="Ingrese sus nombres" id="nombres" class="form-control">
-                    <br>
-                    <label for=""><b>Cedula:</b></label> <!--ETIQUETA DE TEXTO PARA LA PANTALLA-->
-                    <input type="text" placeholder="Ingrese la cédula" id="cedula" class="form-control"> <!--EL PLACEHOLDER NOS DA UNA AYUDA PARA INTRODUCIR INFORMACIÓN LAS CAJAS DE TEXTO-->
-                    <br>
-                    <label for=""><b>Fecha de Nacimiento:</b></label>
-                    <input type="date" id="fechaNacimiento" class="form-control">
-                    <br> 
-                    <label for=""><b>Hora de ingreso:</b></label> <!--SUBRAYADO tag u y cursiva tag i-->
-                    <input type="time" id="horaIngreso" class="form-control">
-                </div>
-                <div class="col-6">
-                    <label for=""><b>Apellidos:</b></label>
-                    <input type="text" placeholder="Ingrese sus apellidos" id="apellidos" class="form-control">
-                    <br>
-                    <label for=""><b>Email:</b></label>
-                    <input type="email" placeholder="Ingrese su email" id="email" required class="form-control"> <!--si le pongo type=email ya valida que tenga un @-->
-                    <br>
-                    <label for="" ><b>Edad:</b></label>
-                    <input type="number" placeholder="Ingrese su edad" id="edad" class="form-control">
-                    <br> 
-                    <label for=""><b>Tipo de consulta:</b></label>
-                    <!--ES UNA LISTA DESPLEGABLE EL select Y option-->
-                    <select name="" id="tipoConsulta" class="form-control">
-                        <option value="Normal">--Normal</option>
-                        <option value="Urgente">--Urgente</option>
-                        <option value="Emergencia">--Emergencia</option>
-                    </select>
-                </div>
-            </div>
-            <div>
-                <br>
-                <hr>
-            </div>
-            <div style="padding: 20px;">
-                <label for=""><b>Alérgico alguna medicación:</b></label>
-                <textarea name="" id="alergicoMedicacion" placeholder="Ingrese medicamentos alergicos del paciente" rows="10" cols="" class="form-control"></textarea> <!--ROWS es como para abajo y el COLS es para la derecha-->
-            </div>
-            <div>
-                <br>
-                <hr>
-            </div>
-            <div style="padding: 20px;">
-                <label for=""><b>Recomendaciones del médico:</b></label>
-                <textarea name="" id="recomendacionMedica" placeholder="Recomendaciones del médico" rows="10" cols="" class="form-control"></textarea>
-            </div>
-            <br>
-            <div class="text-center">
-                <button type="submit" class="btn btn-info btn-lg btn-full-width"><a href="index.html" style="text-decoration: none; color: white;">Limpiar</a></button> <!--EL reset PERMITE LIMPIAR LAS CASILLAS-->
-                <button type="submit" class="btn btn-success btn-lg btn-full-width">Guardar</button> <!--EL submi EN CAMBIO VA A CARGAR LOS DATOS-->
-            </div>
-            <br>
-            <div>
-                <hr>
-            </div>
-            <br>
-    </form>
-    <footer>
-        <br> <br> <br>
-        <h3 class="text-center text-white">Desarrollado por Lenin Flores@</h3>
-    </footer>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-        //IMPORTACIÓN DE LIBRERÍAS //CONFIGURACIONES lo que esta en {}
-        import {getFirestore,collection,addDoc,onSnapshot,deleteDoc,doc}from"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-        
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-        apiKey: "AIzaSyChuep_jaPgXNwG7NqO9LsPFc6d1hfK9qk",
-        authDomain: "registropacientes-6c4d2.firebaseapp.com",
-        projectId: "registropacientes-6c4d2",
-        storageBucket: "registropacientes-6c4d2.appspot.com",
-        messagingSenderId: "596163718939",
-        appId: "1:596163718939:web:04007e06ff4067853dadbe"
-        };
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
 
-        //variables 
-        //insercción
-        const productpacientes = document.getElementById("form-product");
-        productpacientes.addEventListener("submit", async(e)=>{ //enventos (async es de caracter asincrono)
-            e.preventDefault();
-            await addDoc(collection(db,"pacientes"),{
-                nombres: productpacientes.nombres.value,
-                apellidos: productpacientes.apellidos.value,
-                cedula: productpacientes.cedula.value,
-                email: productpacientes.email.value,
-                fechaNacimiento: productpacientes.fechaNacimiento.value,
-                edad: productpacientes.edad.value,
-                horaIngreso: productpacientes.horaIngreso.value,
-                tipoConsulta: productpacientes.tipoConsulta.value,
-                alergicoMedicacion: productpacientes.alergicoMedicacion.value,
-                recomendacionMedica: productpacientes.recomendacionMedica.value
+<body>
+    <div class="login-container">
+        <div class="login-form">
+            <h1 class="text-center">Inicio de Sesión</h1>
+            <div class="mb-3">
+                <label for="usuario" class="form-label">Usuario:</label>
+                <input type="email" placeholder="Ingrese su Usuario Google" id="usuario" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="contrasena" class="form-label">Contraseña:</label>
+                <input type="password" placeholder="Ingrese su Contraseña" id="contrasena" class="form-control"
+                    required>
+            </div>
+            <div class="text-center">
+                <button type="button" class="btn btn-info" id="btnIniciar">Iniciar</button>
+            </div>
+            <div class="text-center mt-3">
+                <button type="button" class="btn btn-danger" id="btnRegistrar">
+                    <i class="bi bi-google"></i> Registrar con Google
+                </button>
+            </div>
+        </div>
+        <!-- CON ESTOS SCRIPT TENGO COMUNICACIÓN CON FIREBASE Y GOOGLE -->
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script>
+            // Your web app's Firebase configuration
+            const firebaseConfig = {
+                apiKey: "AIzaSyChuep_jaPgXNwG7NqO9LsPFc6d1hfK9qk",
+                authDomain: "registropacientes-6c4d2.firebaseapp.com",
+                projectId: "registropacientes-6c4d2",
+                storageBucket: "registropacientes-6c4d2.appspot.com",
+                messagingSenderId: "596163718939",
+                appId: "1:596163718939:web:04007e06ff4067853dadbe"
+            };
+
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+
+            // Función para iniciar sesión con correo y contraseña
+            document.getElementById('btnIniciar').addEventListener('click', () => {
+                const email = document.getElementById('usuario').value;
+                const password = document.getElementById('contrasena').value;
+
+                firebase.auth().signInWithEmailAndPassword(email, password)
+                    .then((userCredential) => {
+                        // Signed in
+                        const user = userCredential.user;
+                        console.log('Inicio de sesión exitoso', user);
+                        alert('Inicio de sesión exitoso');
+                        // Redirige a index.html
+                        window.location.href = "index.html";
+                    })
+                    .catch((error) => {
+                        const errorCode = error.code;
+                        const errorMessage = error.message;
+                        console.error('Error de usuario o contraseña', errorCode, errorMessage);
+                        alert('Correo no válido: ' + errorMessage);
+                    });
             });
-            productpacientes.reset();
-        }); 
-    </script>
+
+            // Función para registrarse con Google
+            document.getElementById('btnRegistrar').addEventListener('click', () => {
+                const provider = new firebase.auth.GoogleAuthProvider();
+                firebase.auth().signInWithPopup(provider)
+                    .then((result) => {
+                        const user = result.user;
+                        console.log('Registro e inicio de sesión con Google exitoso', user);
+                        alert('Registro e inicio de sesión con Google exitoso');
+                        // Redirige  a index.html
+                        window.location.href = "index.html";
+                    })
+                    .catch((error) => {
+                        const errorCode = error.code;
+                        const errorMessage = error.message;
+                        console.error('Error al registrarse con Google', errorCode, errorMessage);
+                        alert('Error al registrarse con Google: ' + errorMessage);
+                    });
+            });
+        </script>
 </body>
+
 </html>
