actualización en el envío de datos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         console.log('Inicio de sesión exitoso', user);
                         alert('Inicio de sesión exitoso');
                         // Redirige a index.html
-                        window.location.href = "index.html";
+                        window.location.href = "registro.html";
                     })
                     .catch((error) => {
                         const errorCode = error.code;
@@ -81,7 +81,7 @@
                         console.log('Registro e inicio de sesión con Google exitoso', user);
                         alert('Registro e inicio de sesión con Google exitoso');
                         // Redirige  a index.html
-                        window.location.href = "index.html";
+                        window.location.href = "registro.html";
                     })
                     .catch((error) => {
                         const errorCode = error.code;
