--- a/editar.html
+++ b/editar.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Registrar</a>
+                            <a class="nav-link active" aria-current="page" href="registro.html">Registrar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="editar.html">Editar</a>
@@ -62,7 +62,7 @@
             </table>
         </div>
         <div class="text-center">
-            <a href="index.html" style="text-decoration: none;">
+            <a href="registro.html" style="text-decoration: none;">
                 <button class="btn btn-secondary">Regresar</button>
             </a>
             <button id="btnEliminar" class="btn btn-danger">Eliminar</button>
