--- a/registro.html
+++ b/registro.html
@@ -22,7 +22,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="">Registrar</a>
+                                    <a class="nav-link active" aria-current="page" href="registro.html">Registrar</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="editar.html">Editar</a>
@@ -86,7 +86,7 @@
             </div>
             <br>
             <div class="text-center">
-                <button type="submit" class="btn btn-info btn-lg btn-full-width"><a href="index.html" style="text-decoration: none; color: white;">Limpiar</a></button> <!--EL reset PERMITE LIMPIAR LAS CASILLAS-->
+                <button type="submit" class="btn btn-info btn-lg btn-full-width"><a href="registro.html" style="text-decoration: none; color: white;">Limpiar</a></button> <!--EL reset PERMITE LIMPIAR LAS CASILLAS-->
                 <button type="submit" class="btn btn-success btn-lg btn-full-width">Guardar</button> <!--EL submi EN CAMBIO VA A CARGAR LOS DATOS-->
             </div>
             <br>
