cambio por faltas de ortografía

--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
 <body>
     <form id="form-product">
             <div class="contenedor">
-                <h1 class=" text-center text-white">Regitro de Pacientes</h1>
+                <h1 class=" text-center text-white">Registro de Pacientes</h1>
             </div>
             <div>
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
